[package]
name = "wanisabi"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Rust binding for the wanikani API: a fork of wanikani-rs"
homepage = "https://github.com/jemsurfer/wanisabi"
repository = "https://github.com/jemsurfer/wanisabi"
keywords = ["api", "wanikani"]
categories = ["api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
wanisabi-model = { path = "wanisabi-model", version = "0.1.1" }
chrono = { version = "0.4.33", features = ["serde"] }
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.196", features = ["derive"]}
serde_json = { version = "1.0.113" }
tokio = { version = "1.35.1", features = ["full"] }
serde_with = "3.6.0"
serde_qs = "0.12.0"
regex = "1.10.3"
text_io = "0.1.12"
wana_kana = "3.0.0"
