[package]
name = "wanikani-rs-model"
version = "0.1.1"
edition = "2021"
description = "Model for wanikani-rs: Forked as upstream outdated"
homepage = "https://github.com/jemsurfer/wanikani-rs"
repository = "https://github.com/jemsurfer/wanikani-rs"
keywords = ["api", "wanikani"]
categories = ["api-bindings"]
readme = "../README.md"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
serde = { version = "1.0.150", features = ["derive"]}
