[package]
name = "wanisabi-model"
version = "0.1.2"
edition = "2021"
description = "Model for wanisabi"
homepage = "https://github.com/jemsurfer/wanisabi"
repository = "https://github.com/jemsurfer/wanisabi/tree/main/wanisabi-model"
keywords = ["api", "wanikani", "wrapper"]
categories = ["api-bindings"]
readme = "../README.md"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
serde = { version = "1.0.150", features = ["derive"]}
